--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
   </script>
-  <div id="snow">
+  <div id="snow"></div><!-- snow -->
   {% include snowsettings.html %}
   <div id="sitewrapper">
     <a class="jumptarget" name="page-top" id="page-top"></a>
@@ -41,6 +41,6 @@
     </div> <!-- page content -->
   </div>
   {% include footer.html %}
-  </div><!-- snow -->
+
   </body>
 </html>
